@@ -45,12 +45,9 @@ import be.khleuven.frank.JCpg.Save.JCpgGallerySaver;
 import be.khleuven.frank.JCpg.UI.JCpgUI;
 
 /**
- * Used for syncing the whole gallery. We sync from top to bottom: cats ->
- * albums -> pictures This is important when executing INSERT queries. This
- * means we want to make new entries in the database which don't yet have a
- * correct id, which is autogenerated by the database. So first we insert a new
- * category, we then fetch the generated id and pass it through to the
- * underlying albums and so on.
+ * Used for syncing the whole gallery.
+ * First we check what's on the server and download all the information not yet saved offline on our disk
+ * Then we upload all the information that was made locally to the server. If the component's id is -1, it means it has not yet been uploaded.
  * 
  * @author Frank Cleynen
  */
@@ -216,7 +213,7 @@ public class JCpgSyncer {
 		
 		
 		// CLIENT -> SERVER
-		
+		createCategories(getUi().getGallery(), phpCommunicator);
 		
 		
 
@@ -336,6 +333,108 @@ public class JCpgSyncer {
 				}
 				
 			}
+			
+		}
+		
+	}
+	/**
+	 * 
+	 * Upload all not yet present information on the server to the server
+	 * 
+	 * @param parent
+	 * 		the parent gallery/category to procees the categories from
+	 * @param phpCommunicator
+	 * 		phpCommunicator to talk with the server
+	 */
+	private void createCategories(JCpgGallery parent, JCpgPhpCommunicator phpCommunicator){
+		
+		String parameters = "";
+		
+		// albums in root gallery
+		if(parent.getClass().equals(JCpgGallery.class)){
+			
+			for(int i=0; i<parent.getAlbums().size(); i++){
+				
+				JCpgAlbum album = parent.getAlbums().get(i);
+				parameters = "createalbum&username=" + getUi().getCpgConfig().getUserConfig().getUsername() + "&categoryid=" + parent.getId() + "&albumname=" + album.getName() + "&albumdesc" + album.getDescription() + "&albumkeywords=" + album.getKeyword() + "&sessionkey=" + getUi().getCpgConfig().getUserConfig().getSessionkey();
+				
+				if(phpCommunicator.performPhpRequest(parameters))
+					System.out.println("JCpgSyncer: " + album.getName() + " was succesfully uploaded");
+				else
+					System.out.println("JCpgSyncer: " + album.getName() + " failed to succesfully upload");
+				
+				// fetch id for this newly uploaded album
+				//parameters = 
+				
+				for(int j=0; j<album.getPictures().size(); j++){
+					
+					JCpgPicture picture = album.getPictures().get(j);
+					parameters = "addpicture&username=" + getUi().getCpgConfig().getUserConfig().getUsername() + "&albumsid=" + album.getId() + "&pictitle=" + picture.getName() + "&piccaption" + picture.getCaption() + "&pickeywords=" + picture.getKeywords() + "&sessionkey=" + getUi().getCpgConfig().getUserConfig().getSessionkey();
+					
+					if(phpCommunicator.performPhpRequest(parameters))
+						System.out.println("JCpgSyncer: " + picture.getName() + " was succesfully uploaded");
+					else
+						System.out.println("JCpgSyncer: " + picture.getName() + " failed to succesfully upload");
+					
+					// fetch id for this newly uploaded picture
+					//parameters = 
+					
+				}
+				
+			}
+			
+		}
+		
+		// Categories
+		for(int i=0; i<parent.getCategories().size(); i++){ // categories
+			
+			JCpgCategory category = parent.getCategories().get(i);
+			
+			if(category.getId() == -1){ // not yet on server
+				
+				parameters = "createcategory&username=" + getUi().getCpgConfig().getUserConfig().getUsername() + "&categoryid=" + parent.getId() + "&categoryname=" + category.getName() + "&categorydesc" + category.getDescription() + "&sessionkey=" + getUi().getCpgConfig().getUserConfig().getSessionkey();
+				
+				if(phpCommunicator.performPhpRequest(parameters))
+					System.out.println("JCpgSyncer: " + category.getName() + " was succesfully uploaded");
+				else
+					System.out.println("JCpgSyncer: " + category.getName() + " failed to succesfully upload");
+				
+				// fetch id for this newly uploaded category
+				//parameters = 
+				
+				for(int j=0; j<category.getAlbums().size(); j++){ // albums
+					
+					JCpgAlbum album = category.getAlbums().get(j);
+					parameters = "createalbum&username=" + getUi().getCpgConfig().getUserConfig().getUsername() + "&categoryid=" + category.getId() + "&albumname=" + album.getName() + "&albumdesc" + album.getDescription() + "&albumkeywords=" + album.getKeyword() + "&sessionkey=" + getUi().getCpgConfig().getUserConfig().getSessionkey();
+					
+					if(phpCommunicator.performPhpRequest(parameters))
+						System.out.println("JCpgSyncer: " + album.getName() + " was succesfully uploaded");
+					else
+						System.out.println("JCpgSyncer: " + album.getName() + " failed to succesfully upload");
+					
+					// fetch id for this newly uploaded album
+					//parameters = 
+					
+					for(int k=0; k<album.getPictures().size(); k++){
+						
+						JCpgPicture picture = album.getPictures().get(k);
+						parameters = "addpicture&username=" + getUi().getCpgConfig().getUserConfig().getUsername() + "&albumsid=" + album.getId() + "&pictitle=" + picture.getName() + "&piccaption" + picture.getCaption() + "&pickeywords=" + picture.getKeywords() + "&sessionkey=" + getUi().getCpgConfig().getUserConfig().getSessionkey();
+						
+						if(phpCommunicator.performPhpRequest(parameters))
+							System.out.println("JCpgSyncer: " + picture.getName() + " was succesfully uploaded");
+						else
+							System.out.println("JCpgSyncer: " + picture.getName() + " failed to succesfully upload");
+						
+						// fetch id for this newly uploaded picture
+						//parameters = 
+						
+					}
+					
+				}
+				
+			}
+			
+			createCategories(category, phpCommunicator); // go through tree structure
 			
 		}
 		
