@@ -1,3 +1,4 @@
+Synchronization of categories from client to server is now possible, I'm now waiting for some functionallity of the API to fetch the id of a newly uploaded component so this feature will fully work
 Fixed bug in synchronization of categories from server to client where sometimes the type of the parent node wasn't correct when searching for a certain node in the tree
 Synchronization of categories from server to client is now possible
 Fixed a bug in the resizer where it was possible for the lower line to go to far, under the picture
